--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^8.9.1",
     "next": "12.2.3",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-firebase-hooks": "^5.0.3",
+    "react-hot-toast": "^2.3.0"
   },
   "devDependencies": {
-    "eslint": "8.21.0",
+    "eslint": "8.21.0", 
     "eslint-config-next": "12.2.3"
   }
 }
